# the-dagwood

./: .gitignore  .tool-versions  Cargo.toml  DAEMONIZATION_ROADMAP.md  EXECUTORME.md  LICENSE  Makefile  README.md  ROADMAP.md  build.rs  mise.toml  test_component.rs
.github/workflows/: mdbook.yml  rust.yml
.windsurf/rules/: confirm-refute-prompts.md  reference-adrs-when-generating-code.md
configs/: complex-workflow-with-fuel-consumption.yaml  demo.yaml  failure-handling-demo.yaml  failure-strategies.yaml  grain-rle-demo.yaml  grain-simple.yaml  metadata-isolation-showcase.yaml  parallel-analysis-pipeline.yaml  parallel-collection.yaml  poc.yaml  rle-rust.yaml  rle_assemblyscript-single.yaml  rle_js.yaml  rle_rust.yaml  simple-pipeline.yaml  simple-text-pipeline.yaml  strategy-backward-compatible-demo.yaml  strategy-level-by-level-demo.yaml  strategy-levelbylevel-demo.yaml  strategy-reactive-demo.yaml  strategy-work-queue-demo.yaml  strategy-workqueue-demo.yaml  topological-ranking-demo.yaml  trait-based-collectors-demo.yaml  wasm-fuel-demo.yaml  wasm-hello-world-demo-reactive.yaml  wasm-hello-world-demo.yaml
doc/adr/: ADR 3 - Execution Backends (Local, RPC, WASM).md  ADR 4 - Unified Abstraction Layer.md  ADR 6 - Configuration and Registry Mechanism.md  ADR 7 - Persistence of DAG Definitions (Deferred).md  ADR 8 - Observability (Proposed).md  ADR 9 - Error Handling Strategy.md
docs/: execution-models-comparison.md  wasi-implementation.md
docs/ADRs/: ADR 1 - Language Choice (Rust).md  ADR 10- Security & Sandboxing (Deferred).md  ADR 11 - Parallel Execution Result Collection Strategy.md  ADR 12 - Processor Intent Declaration and Hybrid Execution Model.md  ADR 13 - Simplified Parallel Execution via Transform-Analyze Separation.md  ADR 14 - Progressive WIT Integration Strategy.md  ADR 15 - WIT-Based WASI Capability System.md  ADR 16 - WASM Processing Node Strategy Pattern.md  ADR 17 - WASM Component Detection and Factory Refactoring.md  ADR 18 - Observability Implementation.md  ADR 19 - Structured Logging and Distributed Tracing Strategy.md  ADR 2 - DAG Execution Patterns (Pluggable Implementations).md  ADR 20 - Multi-Pipeline Architecture & Registry Pattern.md  ADR 21 - Pluggable Protocol Receiver Architecture.md  ADR 22 - Pipeline Lifecycle & Lazy Loading Strategy.md  ADR 23 - Hot-Reload Strategy (Drain-and-Switch).md  ADR 24 - NGINX Integration & Routing Responsibility.md  ADR 25 - Single Binary with Subcommands.md  ADR 26 - Observability Strategy (Health, Metrics, Logging).md  ADR 27 - Graceful Shutdown & Resource Cleanup.md  ADR 28 - Memory Management & Eviction Policy.md  ADR 5 - Public Plugin API Contract (Protobuf + gRPC).md
docs/demo/: SETUP.md  book.toml
docs/observability/: COMPLETION_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  STRUCTURED_LOGGING.md
docs/walkthrough/: SETUP.md  book.toml  mermaid-init.js
docs/wasm/: wit-executor-status.md
examples/: pipeline_demo.rs  yaml_pipeline_demo.rs
proto/: processor.proto
school/kahns-algorithm/: Cargo.toml  RUSTME.md
scripts/: build-wasm.sh  setup-wit-deps.sh
src/: bindings.rs  lib.rs  main.rs
src/backends/: RUSTME.md  mod.rs  stub.rs
src/config/: RUSTME.md  consts.rs  dependency_graph.rs  entry_points.rs  integration_tests.rs  loader.rs  mod.rs  processor_map.rs  registry.rs  runtime.rs  validation.rs
src/engine/: RUSTME-LevelByLevel.md  RUSTME-Reactive.md  RUSTME-WorkQueue.md  RUSTME.md  factory.rs  integration_tests.rs  level_by_level.rs  metadata.rs  mod.rs  pipeline_metadata.rs  priority_work_queue.rs  reactive.rs  work_queue.rs
src/errors/: RUSTME.md  config.rs  execution.rs  mod.rs  processor_map.rs
src/examples/: mod.rs
src/observability/: mod.rs
src/proto/: mod.rs
src/traits/: RUSTME.md  executor.rs  mod.rs  processor.rs
src/utils/: metadata.rs  mod.rs
wasm_components/: Makefile  hello.wasm  hello_world.wasm  rle_grain.wasm
wasm_components/hello_wasm/: ARCHITECTURE.md  Cargo.toml  README.md  build.sh  wit-deps.toml
wasm_components/hello_wasm/src/: lib.rs
wasm_components/hello_world/: Cargo.toml  README.md
wasm_components/rle_grain/: WASI_LIMITATION.md  build.sh  test_rle.gr
wasm_components/run_length_encoding/rust/: Cargo.toml  Makefile  main.rs  wit-deps.toml
wasm_components/run_length_encoding/rust/src/: bindings.rs  lib.rs
wasm_components/run_length_encoding/rust/tests/: wasm_tests.rs
wasm_components/run_length_encoding/rust/wit/: dagwood-extended-component.wit  deps.toml  world.wit
wasm_components/wasm_appender/: Cargo.toml  Makefile  README.md  RUSTME.md  build.sh  wit-deps.toml
wasm_components/wasm_appender/src/: lib.rs
wasm_components/wasm_appender/tests/: simple_wasm_test.rs  wasm_integration_tests.rs  wasm_tests.rs
wasm_components/wasm_appender/tests/common/: mod.rs
wasm_components/wasm_appender/wit/: dagwood-processor.wit
wasm_modules/: hello_world.wasm
wit/: README.md  dagwood-processor.wit  latest.wit  wit-deps.toml
(+155 files in other folders)
