[package]
name = "the-dagwood"
version = "0.1.0"
edition = "2021"

# Build script for compiling protobufs
build = "build.rs"

[dependencies]
# Async ecosystem
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"

# gRPC + Protobuf
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"

# For working with maps/graphs
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Optional (if you use TOML configs later)
toml = "0.8"

# Error handling
thiserror = "1.0"

# Base64 encoding for secure metadata keys
base64 = "0.21"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
