[package]
name = "wasm_appender"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.30"
# wee_alloc = "0.4"  # May not be needed with WIT bindings

[profile.release]
# Optimize for size since WASM modules should be small
opt-level = "s"
lto = true
panic = "abort"
