[package]
name = "run-length-encoding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.30.0"
wit-bindgen-rt = "0.30.0"

[dev-dependencies]
wasmtime = { version = "25.0", features = ["component-model"] }
wit-component = "0.240"
anyhow = "1.0"

[profile.release]
# Optimize for size since WASM modules should be small
opt-level = "s"
lto = true
panic = "abort"

[package.metadata.component]
package = "dagwood:rle-component"

[package.metadata.component.target]
path = "wit"
world = "rle-component"

[package.metadata.component.target.dependencies]
"dagwood:component" = { path = "../../../wit/versions/v1.0.0" }  # Directory containing dagwood-component.wit
# WASI is auto-fetched from the registry